--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,3 +1,5 @@
 <h1>Home#index</h1>
 <p>Find me in app/views/home/index.html.erb</p>
+
+<%= netzke :tareas, :class_name => "Basepack::GridPanel", :model => "Tarea" %>
 <%= link_to "Mis Tareas", tareas_path %>
